custom ccroll Bar overlap fix, if mac hide window btns
Scroll bar overlap with titlebar FIXED!!!
on resize scroll bar resizes.

Detects if MAC or PC. If MAC removes titlebar image and buttont to
prevent iterference with mac trafic light buttons.

Custom scroll bar colours

--- a/client/view/style/gamempire.css
+++ b/client/view/style/gamempire.css
@@ -1,4 +1,4 @@
-html,
+/*html,
 body {
     background-color: #0e1519;
     font-weight: 300;
@@ -6,8 +6,55 @@ body {
     box-shadow: 0 0.5px 0 rgba(0,0,0,0.15), 0 -0.5px 0 rgba(0,0,0,0.15), 0.5px 0 0 rgba(0,0,0,0.15), -0.5px 0 0 rgba(0,0,0,0.15), 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
+*/
+html {
+    overflow: hidden;
+}
+
+body {
+    background-color: #0e1519;
+    font-weight: 300;
+    color: #818181;
+    position: absolute;
+    top: 28px;
+    left: 20px;
+    bottom: 30px;
+    right: 6px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: calc(100% - 35px);
+
+}
+
+
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(255,0,0,0.4); 
+}
+
 body {
     overflow-x: hidden;
+    cursor: default;
+
 }
 
 h1,
@@ -23,7 +70,6 @@ h6 {
 
 html,
 body,
-#content,
 #loginContainer {
     height: 100%;
 }
@@ -31,10 +77,12 @@ body,
 #content {
     transition: 0.5s;
     padding-top: 2rem;
+
 }
 
 #main_content {
     padding: 50px;
+
 
 }
 
@@ -106,14 +154,14 @@ hr {
 
 #titleBar {
     -webkit-app-region: drag;
-    -webkit-user-select: none;
+    user-select: none;
     height: 24px;
     background: #1d2428;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 9999;
     border-bottom: 1px solid #0e1519;
 }
 
@@ -508,6 +556,7 @@ label {
 }
 
 #title-bar-btns {
+    user-select: none;
 	-webkit-app-region: no-drag;
 	position: fixed;
 	top: -1px;
@@ -564,12 +613,14 @@ label {
 }
 
 #title{
+    user-select: none;
+    -webkit-user-select: none;
     width: 100%;
 	max-height: 21px;
 	margin-top: 1px;
 	position: fixed;
 	text-align: center;
-	z-index:-9;
+
 }
 
 #loginmsg {
@@ -665,3 +716,27 @@ label {
     }
 
 } 
+
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(255,0,0,0.4); 
+}
